# SoftwareMetrics

./: .gitignore  AGENTS.md  pyproject.toml
.cursor/rules/: implementation-style.mdc  metric-analyzers.mdc  software-metrics-charter.mdc
src/software_metrics/: __init__.py  __main__.py  cli.py  debug_report.py  discovery.py
src/software_metrics/metrics/: cohesion.py  coupling.py  cyclomatic.py  dit.py
tests/: conftest.py  test_cohesion.py  test_coupling.py  test_cyclomatic.py  test_cyclomatic_corners.py  test_debug_trace.py  test_dit.py
tests/fixtures/: cc_sample.kt  cc_sample.rs  cc_sample.ts
